--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,134 @@
     transform: rotate(360deg);
   }
 }
+
+
+/****************************** Font ******************************/
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
+
+:root {
+  --primary-white: #fff;
+  --primary-blue: #2f74ad;
+  --primary-dark: rgba(255 255 255 0);
+}
+
+.body {
+  font-family: "Roboto Condensed" sans-serif;
+}
+
+
+/****************************** NAVBAR ******************************/
+nav {
+  z-index: 2;
+}
+
+/*--------------- Nav Logo ---------------*/
+.logo {
+  max-width: 29rem;
+  width: 100%;
+}
+
+/*--------------- Nav Links ---------------*/
+nav a.nav-link {
+  letter-spacing: 0.03rem;
+  cursor: pointer;
+}
+
+nav ul li {
+  text-transform: uppercase;
+}
+
+.navbar-nav > li > a {
+  text-align: center;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+  border-radius: 0.5rem;
+  color: var(--primary-white) !important;
+}
+
+.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
+  border-bottom: 0.18rem solid var(--primary-blue);
+}
+
+.navbar-brand {
+  max-width: 29rem;
+  padding: 0.5%;
+}
+
+.navbar-nav > li > a:hover {
+  background-color: var(--primary-blue);
+  border-radius: 0.5rem;
+}
+
+
+/****************************** HEADER ******************************/
+.header-wrapper {
+  position: relative;
+  background: #121211;
+  background-size: cover;
+  background-position: center;
+  height: 95vh;
+}
+
+.main-info {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 2;
+}
+
+.main-info h1 {
+  color: var(--primary-white);
+  text-transform: uppercase;
+}
+
+/*--------------- Contact Me Button ---------------*/
+.btn-main-offer {
+  border: 2px solid var(--primary-blue);
+  text-transform: uppercase;
+  font-size: 1rem;
+  border-radius: 0;
+  padding: 0.6rem 0.75rem 0.75rem 0.75rem;
+  color: var(--primary-white);
+  margin: 2.5rem;
+}
+
+.btn-main-offer:hover {
+  text-decoration: none;
+  background-color: var(--primary-white);
+  opacity: 50;
+  transition: .3s ease-in-out;
+}
+
+/*--------------- Typed Text ---------------*/
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-white);
+}
+
+
+/****************************** TSPARTICLES ******************************/
+/*--------------- Particles ---------------*/
+.tsparticles {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
+
+@media(max-width: 768px) {
+  .particles-canvas {
+    max-width: 2rem;
+    width: 100%;
+  }
+}
+
+/******************************  ******************************/
+/*---------------  ---------------*/
