--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,3 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
 .container {
   height: 100%;
   width: 100% !important;
@@ -168,16 +129,43 @@ nav ul li {
   z-index: 1;
 }
 
-@media(max-width: 768px) {
+@media(max-width: 1170px) {
   .particles-canvas {
     max-width: 2rem;
     width: 100%;
   }
 }
 
-/******************************  ******************************/
-/*---------------  ---------------*/
+/****************************** VERTICAL TIMELINE ******************************/
+.timeline-wrapper {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  z-index: 2;
+}
 
+.timeline-container {
+  display: flex;
+  align-content: center;
+}
+
+/*--------------- Timeline Elements ---------------*/
+.vertical-timeline-element-content {
+  padding: .8rem !important;
+}
+
+.vertical-timeline-element-date {
+  color: var(--primary-white) !important;
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 1170px) {
+  .vertical-timeline-element-date {
+    display: block !important;
+    float: none !important;
+    color: var(--primary-dark) !important;
+  }
+}
 
 /******************************  ******************************/
 /*---------------  ---------------*/
