--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,7 @@ nav ul li {
 
 /*--------------- Profile Pic ---------------*/
 .profile-pic-container {
+  margin: 2%;
   position: relative;
   display: flex;
   padding: 1.5%;
@@ -164,7 +165,7 @@ nav ul li {
 }
 
 .profile-pic-img {
-  max-width: 100 auto;
+  max-width: 90 auto;
   width: 100%;
   max-height: 100;
   align-self: center;
@@ -178,6 +179,11 @@ nav ul li {
   flex-direction: column;
   background-color: var(--primary-white);
   border-radius: 5px;
+}
+
+.profile-bio-container h2 {
+  margin-left: 2%;
+  margin-top: 1%;
 }
 
 .profile-bio-container h3 {
@@ -286,7 +292,8 @@ nav ul li {
 
 .smash-pics {
   display: block;
-  width: 50rem;
+  max-width: 50rem;
+  width: 100%;
   height: 32rem;
   background-color: var(--primary-white);
   margin: 1%;
@@ -296,15 +303,39 @@ nav ul li {
 .smash-records {
   display: block;
   width: 70rem;
+  width: 100%;
   height: 50rem;
   background-color: var(--primary-blue);
   border-radius: 10px;
 }
 
 
-/******************************  ******************************/
-/*---------------  ---------------*/
+/****************************** CONTACT ME ******************************/
+.contact-wrapper {
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
 
+
+/*--------------- Form  ---------------*/
+.mssg-result-container {
+  position: relative;
+  max-width: 24rem;
+  margin: 2%;
+  font-weight: 500;
+  font-size: large;
+  text-align: center;
+  color: var(--primary-blue);
+  display:inline;
+}
+
+.g-recaptcha {
+  position: relative;
+  display:inline;
+  z-index: 2;
+}
 
 /******************************  ******************************/
 /*---------------  ---------------*/
