--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ nav ul li {
 }
 
 .profile-pic-img {
-  max-width: 90 auto;
+  max-width: 80%;
   width: 100%;
   max-height: 100;
   align-self: center;
@@ -290,16 +290,6 @@ nav ul li {
   font-style: italic;
 }
 
-.smash-pics {
-  display: block;
-  max-width: 50rem;
-  width: 100%;
-  height: 32rem;
-  background-color: var(--primary-white);
-  margin: 1%;
-  border-radius: 10px;
-}
-
 .smash-records {
   display: block;
   width: 70rem;
@@ -318,7 +308,6 @@ nav ul li {
   position: relative;
 }
 
-
 /*--------------- Form  ---------------*/
 .mssg-result-container {
   position: relative;
@@ -335,6 +324,66 @@ nav ul li {
   position: relative;
   display:inline;
   z-index: 2;
+}
+
+/****************************** IMG CAROUSEL ******************************/
+/*--------------- Carousel ---------------*/
+.carousel-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
+}
+
+.img-carousel {
+  margin: 2%;
+}
+
+.rec-carousel {
+  width: 100%;
+  height: 100%;
+  padding: 2%;
+}
+
+.rec-item-wrapper img{
+  width: 100%;
+}
+
+button.rec-dot{
+  box-shadow: 0 0 1px 2px var(--primary-white);
+  background-color: var(--primary-grey);
+}
+
+button.rec-dot:hover, .rec-dot:active, button.rec-dot:focus:enabled  {
+  box-shadow: 0 0 1px 2px var(--primary-blue);
+}
+
+.rec.rec-arrow:disabled {
+  visibility: hidden;
+}
+
+.rec.rec-arrow, .rec.rec-arrow:active  {
+  color: var(--primary-blue);
+  background-color: transparent;
+}
+
+.rec.rec-arrow-left:hover:enabled,
+.rec.rec-arrow-right:hover:enabled{
+    background-color: var(--primary-blue);
+    box-shadow: 0 0 1px 2px var(--primary-grey);
+}
+
+.rec.rec-arrow-left:active, .rec.rec-arrow-right:active, 
+.rec.rec.arrow-left:focus, .rec.rec.arrow-right:focus {
+  background-color: transparent;
+}
+
+@media only screen and (max-width: 540px) {
+  .carousel-wrapper {
+    align-items: center;
+    margin: 0%;
+  }
 }
 
 /******************************  ******************************/
