--- a/src/App.css
+++ b/src/App.css
@@ -299,6 +299,23 @@ nav ul li {
   border-radius: 10px;
 }
 
+.smash-match-title {
+  margin: 1%;
+  width: auto;
+  color: var(--primary-white);
+  -webkit-text-stroke: .05rem var(--primary-white);
+}
+
+.smash-link {
+  position: relative;
+  display: contents;
+  color: var(--primary-white);
+  margin: 2%;
+  font-size: x-large;
+  font-family: "Roboto Condensed" sans-serif;
+  width: 100% auto;
+}
+
 
 /****************************** CONTACT ME ******************************/
 .contact-wrapper {
@@ -340,14 +357,17 @@ nav ul li {
   margin: 2%;
 }
 
+/*--------------- React Elastic Carousel ---------------*/
 .rec-carousel {
   width: 100%;
   height: 100%;
   padding: 2%;
 }
 
-.rec-item-wrapper img{
+.rec-item-wrapper img {
   width: 100%;
+  height: 100%;
+  object-fit:contain;
 }
 
 button.rec-dot{
@@ -383,6 +403,13 @@ button.rec-dot:hover, .rec-dot:active, button.rec-dot:focus:enabled  {
   .carousel-wrapper {
     align-items: center;
     margin: 0%;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .rec.rec-carousel {
+    width: 100%;
+
   }
 }
 
