--- a/src/App.css
+++ b/src/App.css
@@ -221,7 +221,7 @@ nav ul li {
     display: flex;
     flex-direction: column;
     align-content: center;
-
+    
   }
 
   .profile-pic-img {
@@ -270,11 +270,32 @@ nav ul li {
 }
 
 /****************************** SMASH ULTIMATE ******************************/
+.smash-profile {
+  display: flex;
+  position: relative;
+  max-width: 40rem;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  padding: 1%;
+  margin: 0 auto;
+}
+
+.smash-profile img {
+  width: 100%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
 /*--------------- Smash Info ---------------*/
 .smash-info-wrapper {
   position: relative;
   z-index: 2;
   margin-bottom: 2rem;
+  max-width: 100%;
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .smash-info-container {
@@ -297,7 +318,21 @@ nav ul li {
   width: 100%;
   height: 50rem;
   background-color: var(--primary-blue);
+  opacity: 90%;
   border-radius: 10px;
+}
+
+.smash-video-container {
+  height: 100%;
+  /* padding-bottom: 56.25%; */
+}
+
+.smash-video-container iframe {
+  position: relative;
+  width: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+  border-radius: 6.5%;
 }
 
 .smash-match-title {
@@ -330,7 +365,8 @@ nav ul li {
 }
 
 .img-carousel {
-  margin: 2%;
+  padding-left: 2%;
+  padding-right: 2%
 }
 
 /*--------------- React Elastic Carousel ---------------*/
@@ -378,14 +414,6 @@ button.rec-dot:hover, .rec-dot:active, button.rec-dot:focus:enabled  {
 .rec.rec-arrow-left:active, .rec.rec-arrow-right:active, 
 .rec.rec.arrow-left:focus, .rec.rec.arrow-right:focus {
   background-color: transparent;
-}
-
-@media only screen and (max-width: 540px) {
-  
-}
-
-@media only screen and (max-width: 1200px) {
-  
 }
 
 
