--- a/src/App.css
+++ b/src/App.css
@@ -323,7 +323,9 @@ nav ul li {
 }
 
 .smash-video-container {
-  height: 100%;
+  position: relative;
+  display: flex;
+  width: 100%;
   /* padding-bottom: 56.25%; */
 }
 
@@ -332,7 +334,7 @@ nav ul li {
   width: 100%;
   padding-left: 5%;
   padding-right: 5%;
-  border-radius: 6.5%;
+  border-radius: 55px/10%;
 }
 
 .smash-match-title {
@@ -350,6 +352,9 @@ nav ul li {
   font-family: "Roboto Condensed" sans-serif;
   width: 100% auto;
 }
+
+/*--------------- GuhHuh Side Input ---------------*/
+
 
 
 /****************************** IMG CAROUSEL ******************************/
