New Smash Video, fixed resize, new icon

--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ nav ul li {
 }
 
 /*--------------- Contact Me Button ---------------*/
-.btn-main-offer {
+.btn-contact-me {
   border: 2px solid var(--primary-blue);
   text-transform: uppercase;
   font-size: 1rem;
@@ -111,7 +111,7 @@ nav ul li {
   margin: 2.5rem;
 }
 
-.btn-main-offer:hover {
+.btn-contact-me:hover {
   text-decoration: none;
   background-color: var(--primary-white);
   opacity: 50;
@@ -314,27 +314,33 @@ nav ul li {
 
 .smash-records {
   display: block;
-  width: 70rem;
   width: 100%;
-  height: 50rem;
+  height: auto;
   background-color: var(--primary-blue);
   opacity: 90%;
   border-radius: 10px;
 }
 
 .smash-video-container {
-  position: relative;
-  display: flex;
-  width: 100%;
-  /* padding-bottom: 56.25%; */
+  max-width: 420px;
+  margin: 0px auto;
+  padding-top: 1rem;
 }
 
-.smash-video-container iframe {
+.smash-video-container > div {
   position: relative;
+  padding-bottom: 75%;
+  height: 0px;
+}
+
+
+.smash-video-container iframe {
+  position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
-  padding-left: 5%;
-  padding-right: 5%;
-  border-radius: 55px/10%;
+  height: 100%;
+  border-radius: 0.8rem;
 }
 
 .smash-match-title {
@@ -344,13 +350,16 @@ nav ul li {
   -webkit-text-stroke: .05rem var(--primary-white);
 }
 
-.smash-link {
-  position: relative;
-  display: contents;
-  font-size: 1.3rem;
-  color: var(--primary-white);
-  font-family: "Roboto Condensed" sans-serif;
-  width: 100% auto;
+.smash-coming-soon {
+  max-width: 100%;
+  padding: 2rem;
+}
+
+@media only screen and (max-width: 575px) {
+  .smash-video-container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
 
 /*--------------- GuhHuh Side Input ---------------*/
