--- a/src/App.css
+++ b/src/App.css
@@ -362,9 +362,47 @@ nav ul li {
   }
 }
 
-/*--------------- GuhHuh Side Input ---------------*/
+/*--------------- GuhHuh Button Input ---------------*/
+.guhhuh-sound-container {
+  position: absolute;
+  z-index: 3;
+}
 
+.guhhuh-toggle button {
+  max-width: 100%;
+  max-height: 100%;
+  background-color: transparent;
+  color: var(--primary-white);
+  border-color: var(--primary-white);
+  border-radius: 0.5rem;
+  margin: 0.5rem;
+}
 
+.guhhuh-button {
+  position: absolute;
+  width: 5rem;
+  height: 5rem;
+  margin-left: 1rem;
+  background-image: url('././imgs/guhhuh.png');
+  background-size: cover;
+  border-radius: 0.5rem;
+}
+
+@media only screen and (min-width: 530px) {
+  .guhhuh-button {
+    margin-left: 2rem;
+    width: 8rem;
+    height: 8rem;
+  }
+}
+
+@media only screen and (max-width: 288px) {
+  .guhhuh-button {
+    margin: 0.5rem;
+    width: 4rem;
+    height: 4rem;
+  }
+}
 
 /****************************** IMG CAROUSEL ******************************/
 /*--------------- Carousel ---------------*/
